Fix - Spacing on Designers and packages section

--- a/assets/stylesheet/scss/pages/home/sections/_designers.scss
+++ b/assets/stylesheet/scss/pages/home/sections/_designers.scss
@@ -6,6 +6,7 @@
   .#{$prefix}designers-list {
     .#{$prefix}designer-card {
       margin-top: 10px;
+      padding: 0 10px;
     }
 
     img {
