--- a/assets/stylesheet/scss/pages/home/sections/_packages.scss
+++ b/assets/stylesheet/scss/pages/home/sections/_packages.scss
@@ -5,6 +5,7 @@
 
   .package-list {
     margin-top: 10px;
+    padding: 0 10px;
   }
 
   .packages-list {
